--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       </div>
       <div class="nav-tabs">
         <a href="index.html" class="nav-tab active">Tasks</a>
+        <a href="agents.html" class="nav-tab">Agents</a>
         <a href="calendar.html" class="nav-tab">Calendar</a>
         <a href="memory.html" class="nav-tab">Memory</a>
         <a href="team.html" class="nav-tab">Team</a>
-        <a href="office.html" class="nav-tab">Office</a>
       </div>
       <div class="nav-right">
         <div class="nav-status">
