Reconfigure agents view: keep Estimator + add Prospector

--- a/agents.html
+++ b/agents.html
@@ -96,7 +96,8 @@
       'agent-scout': 'radar',
       'agent-ops': 'dispatch',
       'agent-designer': 'pixel',
-      'agent-estimator': 'estimator'
+      'agent-estimator': 'estimator',
+      'agent-prospect': 'prospector'
     };
 
     async function load() {
