Add Prospects page — 30 cold outreach targets with search, filters, status tracking

--- a/agents.html
+++ b/agents.html
@@ -56,6 +56,7 @@
       </div>
       <div class="nav-tabs">
         <a href="index.html" class="nav-tab">Tasks</a>
+        <a href="prospects.html" class="nav-tab">Prospects</a>
         <a href="agents.html" class="nav-tab active">Agents</a>
         <a href="calendar.html" class="nav-tab">Calendar</a>
         <a href="memory.html" class="nav-tab">Memory</a>
