--- a/calendar.html
+++ b/calendar.html
@@ -15,6 +15,7 @@
       </div>
       <div class="nav-tabs">
         <a href="index.html" class="nav-tab">Tasks</a>
+        <a href="prospects.html" class="nav-tab">Prospects</a>
         <a href="calendar.html" class="nav-tab active">Calendar</a>
         <a href="memory.html" class="nav-tab">Memory</a>
         <a href="team.html" class="nav-tab">Team</a>
