--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       </div>
       <div class="nav-tabs">
         <a href="index.html" class="nav-tab active">Tasks</a>
+        <a href="prospects.html" class="nav-tab">Prospects</a>
         <a href="agents.html" class="nav-tab">Agents</a>
         <a href="calendar.html" class="nav-tab">Calendar</a>
         <a href="memory.html" class="nav-tab">Memory</a>
