--- a/team.html
+++ b/team.html
@@ -253,6 +253,7 @@
       </div>
       <div class="nav-tabs">
         <a href="index.html" class="nav-tab">Tasks</a>
+        <a href="prospects.html" class="nav-tab">Prospects</a>
         <a href="calendar.html" class="nav-tab">Calendar</a>
         <a href="memory.html" class="nav-tab">Memory</a>
         <a href="team.html" class="nav-tab active">Team</a>
