Upgrade prospects page: full 30 leads, detail panel, status/priority tracking, filters

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <a href="prospects.html" class="nav-tab">Prospects</a>
         <a href="agents.html" class="nav-tab">Agents</a>
         <a href="calendar.html" class="nav-tab">Calendar</a>
+        <a href="prospects.html" class="nav-tab">Prospects</a>
         <a href="memory.html" class="nav-tab">Memory</a>
         <a href="team.html" class="nav-tab">Team</a>
       </div>
