--- a/agents.html
+++ b/agents.html
@@ -59,6 +59,7 @@
         <a href="prospects.html" class="nav-tab">Prospects</a>
         <a href="agents.html" class="nav-tab active">Agents</a>
         <a href="calendar.html" class="nav-tab">Calendar</a>
+        <a href="prospects.html" class="nav-tab">Prospects</a>
         <a href="memory.html" class="nav-tab">Memory</a>
         <a href="team.html" class="nav-tab">Team</a>
       </div>
