--- a/calendar.html
+++ b/calendar.html
@@ -17,6 +17,7 @@
         <a href="index.html" class="nav-tab">Tasks</a>
         <a href="prospects.html" class="nav-tab">Prospects</a>
         <a href="calendar.html" class="nav-tab active">Calendar</a>
+        <a href="prospects.html" class="nav-tab">Prospects</a>
         <a href="memory.html" class="nav-tab">Memory</a>
         <a href="team.html" class="nav-tab">Team</a>
         <a href="office.html" class="nav-tab">Office</a>
