--- a/office.html
+++ b/office.html
@@ -332,6 +332,7 @@
       <div class="nav-tabs">
         <a href="index.html" class="nav-tab">Tasks</a>
         <a href="calendar.html" class="nav-tab">Calendar</a>
+        <a href="prospects.html" class="nav-tab">Prospects</a>
         <a href="memory.html" class="nav-tab">Memory</a>
         <a href="team.html" class="nav-tab">Team</a>
         <a href="office.html" class="nav-tab active">Office</a>
